update calendar: select date and create form event dialog

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
@@ -43,18 +44,22 @@
     "lucide-react": "^0.417.0",
     "moment-timezone": "^0.5.46",
     "node-sass": "^9.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-i18next": "^15.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scroll-to-top": "^3.0.0",
     "react-time-picker": "^7.0.0",
     "sass": "^1.77.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
