--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "concurrently \"npm:dev\" \"npm:server\" ",
-    "server": "npx json-server db.json ",
+    "server": "npm --prefix ./server run dev",
     "dev": "vite --open --host --port 1812",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -51,15 +52,18 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scroll-to-top": "^3.0.0",
     "react-time-picker": "^7.0.0",
+    "react-tooltip": "^5.28.0",
     "sass": "^1.77.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
