--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concurrently": "^9.0.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "eslint-plugin-prettier": "^5.2.1",
     "firebase": "^11.0.1",
     "i18next": "^23.16.2",
@@ -52,20 +55,19 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
-    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scroll-to-top": "^3.0.0",
     "react-time-picker": "^7.0.0",
+    "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "sass": "^1.77.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.1",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
